update leader location
